[gd_scene load_steps=2 format=3]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 100
script = ExtResource("1")

[node name="PauseOverlay" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="PauseContainer" type="CenterContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="PauseContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
text = "RESUME (ESC)"
theme_override_font_sizes/font_size = 20

[node name="MainMenuButton" type="Button" parent="PauseContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
text = "MAIN MENU"
theme_override_font_sizes/font_size = 20

[connection signal="pressed" from="PauseContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_pressed"]
